[project]
name = "snow"
version = "0.1.0"
description = "MCP server for ServiceNow laptop refresh ticket management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.6.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "pydantic>=2.5.0",
    "requests>=2.25.0",
    "tracing-config",
]

[project.scripts]
snow = "snow.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snow"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

# Configure mypy to use source directories for local packages
mypy_path = "../../tracing-config/src"

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
]
follow_imports = "skip"

[tool.uv.sources]
tracing-config = { path = "../../tracing-config" }