[project]
name = "zammad-mcp"
version = "0.1.0"
description = "MCP server for Zammad ticket actions (ticket-resolution flow) with secure AUTHORITATIVE_USER_ID"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudevents>=1.6.0,<2",
    "httpx>=0.28.1",
    "mcp-common",
    "python-multipart>=0.0.22",
    "mcp[cli]>=1.23",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "pydantic>=2.5.0",
    "self-service-agent-shared-models",
    "tracing-config",
]

[project.scripts]
zammad-mcp = "zammad_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zammad_mcp"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "../../tracing-config/src:../../shared-models/src:../mcp-common/src"

[[tool.mypy.overrides]]
module = [
    "mcp_common.*",
    "opentelemetry.*",
    "shared_models.*",
]
follow_imports = "skip"

# FastMCP decorators use ``AnyFunction`` (``Callable[..., Any]``); mypy strict treats that as an untyped decorator.
[[tool.mypy.overrides]]
module = "zammad_mcp.server"
disallow_untyped_decorators = false

[tool.uv.sources]
mcp-common = { path = "../mcp-common" }
self-service-agent-shared-models = { path = "../../shared-models" }
tracing-config = { path = "../../tracing-config" }
